  * an empty D64 or D81 image is automatically created when trying to
    open a file that does not exist
  * disk and tape images can be opened from .zip format archives, the
    first packed file with matching extension is temporarily extracted
    and used in read-only mode
  * added support for comments (beginning with ; or #) in the breakpoint
    list
  * fixed DigiBlaster bug, SID external input was muted by default
  * fixed horizontal scroll bug in multicolor character mode
  * minor fixes in 1551 and TED emulation
  * fixed video breakpoints not working when the priority threshold is
    not zero

Changes in version 1.2.10.1
---------------------------

  * fixed preview bug in p4fliconv

Changes in version 1.2.10
-------------------------

  * new configuration options for C64 compatible SID emulation
  * updated SID emulation to use reSID 1.0 instead of 0.16
  * video display improvements and bug fixes; the screen is no longer
    blanked while the emulator is paused
  * the debugger window is hidden only after a short delay when it is
    closed, this fixes the flickering while using the step buttons
  * the editor buffer in the monitor has been increased from 120 to 160
    lines
  * memory dump is now also shown in ASCII format
  * new execute ('x') type of breakpoints, the ignore data reads button
    has been removed
  * in addition to the default hexadecimal format, it is also possible
    to specify numbers in the monitor in binary (e.g. %1010), octal
    (12o), and decimal (10l) format
  * new "step" buttons for stepping to the 16-bit address at the top of
    the stack ('Return') or any 16-bit address specified by the user
    ('Step to')
  * the debugger prints more detailed information about syntax and
    runtime errors in Lua scripts, and there is a new button to insert
    an empty breakpoint callback function
  * it is possible to delete single breakpoints in Lua scripts by using
    a negative priority value